--- a/train.ipynb
+++ b/train.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
     "    def __getitem__(self, index):\n",
     "        text = self.text[index]\n",
     "        ids_orig = tokenizer.encode(text).ids\n",
-    "        ids=torch.tensor(([self.start_token]+ids_orig+[self.pad_token]*(self.output_tokens))[:self.output_tokens-1]+[self.end_token])\n",
+    "        ids=torch.tensor(([self.start_token]+ids_orig+[self.end_token]+[self.pad_token]*(self.output_tokens))[:self.output_tokens-1])\n",
     "        \n",
     "        to_skip = random.randint(self.min_skip_tokens,self.max_skip_tokens)\n",
     "        to_skip = min(to_skip,len(ids_orig)//4)\n",
